[package]
name = "cron-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.16.0"
chrono = "0.4.23"
tokio-cron-scheduler = "*"
tokio = {version = "1.22.0", features = ["full"]}
uuid = { version = "1.2.2", features = ["v4"] }
thiserror = "1.0"